Verbessungsvorschläge aus Reviews eingearbeitet

--- a/tD2_txt.bib
+++ b/tD2_txt.bib
@@ -90,7 +90,7 @@
  year = {2007},
  isbn = {3836446332, 9783836446334},
  publisher = {VDM Verlag},
- address = {Saarbr\&\#252;cken, Germany, Germany},
+ address = {Saarbrücken, Germany, Germany},
 }
 
 @misc{tD2_Iyer03,
@@ -116,6 +116,57 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@inproceedings{tD2_WXQY06,
+ author = {Wang, Hao and Xie, Haiyong and Qiu, Lili and Yang, Yang Richard and Zhang, Yin and Greenberg, Albert},
+ title = {COPE: traffic engineering in dynamic networks},
+ booktitle = {Proceedings of the 2006 conference on Applications, technologies, architectures, and protocols for computer communications},
+ series = {SIGCOMM '06},
+ year = {2006},
+ isbn = {1-59593-308-5},
+ location = {Pisa, Italy},
+ pages = {99--110},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1159913.1159926},
+ doi = {http://doi.acm.org/10.1145/1159913.1159926},
+ acmid = {1159926},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {COPE, oblivious routing, optimization, traffic engineering, unpredictable traffic},
+} 
+
+@inproceedings{tD2_AgNB05,
+ author = {Agarwal, Sharad and Nucci, Antonio and Bhattacharyya, Supratik},
+ title = {Measuring the Shared Fate of IGP Engineering and Interdomain Traffic},
+ booktitle = {Proceedings of the 13TH IEEE International Conference on Network Protocols},
+ year = {2005},
+ isbn = {0-7695-2437-0},
+ pages = {236--245},
+ numpages = {10},
+ url = {http://portal.acm.org/citation.cfm?id=1099544.1100355},
+ doi = {10.1109/ICNP.2005.22},
+ acmid = {1100355},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@inproceedings{tD2_RoTZ03,
+ author = {Roughan, Matthew and Thorup, Mikkel and Zhang, Yin},
+ title = {Traffic engineering with estimated traffic matrices},
+ booktitle = {Proceedings of the 3rd ACM SIGCOMM conference on Internet measurement},
+ series = {IMC '03},
+ year = {2003},
+ isbn = {1-58113-773-7},
+ location = {Miami Beach, FL, USA},
+ pages = {248--258},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/948205.948237},
+ doi = {http://doi.acm.org/10.1145/948205.948237},
+ acmid = {948237},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {MPLS, OSPF, SNMP, traffic engineering, traffic matrix estimation},
+} 
 
 
 @misc{tD2_RFC1142,
@@ -183,6 +234,19 @@
   year=2005,
   month=may,
     url="http://www.ietf.org/rfc/rfc4090.txt",
+}
+
+@misc{tD2_RFC5286,
+  author="A. Atlas and A. Zinin",
+  title="{Basic Specification for IP Fast Reroute: Loop-Free Alternates}",
+  series="Request for Comments",
+  number="5286",
+  howpublished="RFC 5286 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=sep,
+    url="http://www.ietf.org/rfc/rfc5286.txt",
 }
 
 @misc{tD2_RFC5714,
